--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <div class="section">
   <h2>Submission and Publication</h2>
-  <p>Paper submission system is available at: <p>EasyChair - Register for the workshop <a href="https://easychair.org/my/conference?conf=aiotmapd2025" target="_blank">here</a>.</p>. Prospective authors are invited to submit original papers reporting on research results, experimentations or novel applications related to the workshop topic</p>
+  <p>Paper submission system is available at: EasyChair <a href="https://easychair.org/my/conference?conf=aiotmapd2025" target="_blank">here</a>. Prospective authors are invited to submit original papers reporting on research results, experimentations or novel applications related to the workshop topic</p>
   <p>Participants are invited to submit papers of 6-8 pages, or position statements of 2-4 pages, formatted according to IEEE templates (<a href="https://www.ieee.org/conferences/publishing/templates" target="_blank">download templates</a>).</p>
   <p>Submissions will undergo peer review by experts, focusing on originality, relevance, and clarity. Accepted papers will be published in the ICWL-2025 proceedings.</p>
 </div>
@@ -194,3 +194,4 @@
 </body>
 
 </html>
+
