--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </style>
 </head>
 <body>
-<h1 class="main-title">International Workshop on AI and IoT-Enabled Technologies for Medical Education, Assessment, and Personalized Learning in the Digital Age (AIoT-MAPD 2025)</h1>
+<h1 class="main-title">Workshop on AI and IoT-Enabled Technologies for Medical Education, Assessment, and Personalized Learning in the Digital Age (AIoT-MAPD 2025)</h1>
 <!-- rest of your content -->
 </body>
 
@@ -236,4 +236,5 @@
 
 </body>
 </html>
+
 
